--- a/HTML_W3school/HTML Attributes.html
+++ b/HTML_W3school/HTML Attributes.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <a href=" https://www-w3schools-com.translate.goog/html/html_attributes.asp?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en"> Visit W3school by lưu nhật tùng -2121051214 </a>
-    <img src="https://tse4.mm.bing.net/th?id=OIP.O1Tj1kLrLwPBs2jscCuCtwHaEw&rs=1&pid=ImgDetMain" 
-    width="500" 
-    height="600" 
-    alt="Đây là 1 bức tranh phong cảnh đẹp">
-<p style="color: green;">lưu nhật tùng-2121051214 </p>
-<p title="Phạm Văn Tú-2121050628 check title html_attributes">lưu nhật tùng-2121051214</p>
-</body>
+  </head>
+  <body>
+    <a
+      href=" https://www-w3schools-com.translate.goog/html/html_attributes.asp?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en"
+    >
+      Visit W3school by lưu nhật tùng -2121051214
+    </a>
+    <img
+      src="https://tse4.mm.bing.net/th?id=OIP.O1Tj1kLrLwPBs2jscCuCtwHaEw&rs=1&pid=ImgDetMain"
+      width="500"
+      height="600"
+      alt="Đây là 1 bức tranh phong cảnh đẹp"
+    />
+    <p style="color: green">lưu nhật tùng-2121051214</p>
+    <p title="lưu nhật tùng-2121051214 check title html_attributes">
+      lưu nhật tùng-2121051214
+    </p>
+  </body>
 </html>
