--- a/HTML_W3school/HTML Quotations.html
+++ b/HTML_W3school/HTML Quotations.html
@@ -9,7 +9,7 @@
     <p>lưu nhật tùng-2121051214</p>
     <blockquote cite="https://www.facebook.com/">lưu nhật tùng</blockquote>
     <p>lưu nhật tùng<q>2121051214</q></p>
-    <p><abbr title="Phạm Văn Tú">PVT</abbr>21210512141214</p>
+    <p><abbr title="lưu nhật tùng">PVT</abbr>21210512141214</p>
     <address>
       Xã.<br />
       Huyện:<br />
